[package]
authors = [
  "Manish Goregaokar <manishsmail@gmail.com>",
  "Michal 'vorner' Vaner <vorner@vorner.cz>",
]
name = "array-init"
version = "0.1.1"
license = "MIT OR Apache-2.0"
edition = "2018"
description = "Safe wrapper for initializing fixed-size arrays"
repository = "https://github.com/Manishearth/array-init/"
documentation = "https://docs.rs/crate/array-init"

keywords = ["abstraction", "initialization", "no_std"]
